--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dio: ^5.1.1
   json_annotation: ^4.8.0
   flutter_session_manager: ^1.0.3
+  flutter_bloc: ^8.1.3
   
 
 dev_dependencies:
