--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   fluttertoast: ^8.2.4
   flutter_riverpod: ^2.4.9
   pin_code_fields: ^8.0.1
+  http_parser: ^4.0.2
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
