--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   pin_code_fields: ^8.0.1
   http_parser: ^4.0.2
   jwt_decode: ^0.3.1
+  geocoding: ^2.1.1
+  geolocator: ^10.1.0
+  draggable_bottom_sheet: ^1.0.2
 
 dev_dependencies:
   flutter_test:
