--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   geocoding: ^2.1.1
   geolocator: ^10.1.0
   draggable_bottom_sheet: ^1.0.2
+  uuid: ^4.2.2
 
 dev_dependencies:
   flutter_test:
