--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   geocoding: ^2.1.1
   geolocator: ^10.1.0
   draggable_bottom_sheet: ^1.0.2
+  mime: ^1.0.5
+  video_thumbnail: ^0.5.3
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
