--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   uuid: ^4.2.2
   cached_network_image: ^3.3.1
   equatable: ^2.0.5
+  age_calculator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
