--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   cached_network_image: ^3.3.1
   equatable: ^2.0.5
   age_calculator: ^1.0.0
+  video_thumbnail: ^0.5.3
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
