--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_bloc:
   bloc: ^8.1.2
   dio_cache_interceptor_hive_store: ^3.2.2
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
