--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   bloc: ^8.1.2
   dio_cache_interceptor_hive_store: ^3.2.2
   flutter_secure_storage: ^8.0.0
+  flutter_card_swiper: ^7.0.0
+  swipe_cards: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
