--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   flutter_card_swiper: ^7.0.0
   swipe_cards: ^2.0.0+1
+  dotted_border: ^2.1.0
+
 
 dev_dependencies:
   flutter_test:
